[package]
name = "Wallet-Manager"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
clap = { version = "4.4", features = ["derive"] }
enigo = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"